# rt15_portable_runtime

./: .gitattributes  README.md  clean.bat
rpr/: CMakeLists.txt
rpr/include/: rpr.h  rpr_main.h  rpr_mem.h
rpr/include/layer000/: rt_types.h
rpr/include/layer001/: rt_atomic.h  rt_comparison.h  rt_eol.h  rt_hash.h  rt_heap.h  rt_input_stream.h  rt_memory.h  rt_os_headers.h  rt_output_stream.h
rpr/include/layer002/: rt_binary_search.h  rt_buffered_input_stream.h  rt_buffered_output_stream.h  rt_chrono.h  rt_comparison.h  rt_critical_section.h  rt_double.h  rt_error.h  rt_event.h  rt_float.h  rt_get_process_id.h  rt_io_device.h  rt_memory_input_stream.h  rt_named_mutex.h  rt_quick_sort.h  rt_shared_mutex.h  rt_sleep.h  rt_slurp.h  rt_system_info.h  rt_thread_local_storage.h  rt_virtual_memory.h
rpr/include/layer003/: rt_binary_search.h  rt_char.h  rt_char8.h  rt_date.h  rt_env_var.h  rt_fast_initialization.h  rt_file.h  rt_file_mapping.h  rt_heap.h  rt_library.h  rt_page_heap.h  rt_pipe.h  rt_quick_sort.h  rt_read_lines.h  rt_semaphore.h  rt_shared_memory.h  rt_spinlock.h  rt_thread.h
rpr/include/layer004/: rt_address.h  rt_array.h  rt_base64.h  rt_command_line_args.h  rt_console.h  rt_encoding.h  rt_file_path.h  rt_memory_output_stream.h  rt_os_version.h  rt_page_heap.h  rt_random.h  rt_readers_writer_mutex.h  rt_shared_mutex.h  rt_small_file.h  rt_static_heap.h  rt_time.h  rt_url.h  rt_uuid.h
rpr/include/layer005/: rt_check_rpr.h  rt_console.h  rt_deduce_encoding.h  rt_encoding_deducer.h  rt_env_vars.h  rt_file.h  rt_file_system.h  rt_hash_table.h  rt_list.h  rt_runtime_heap.h  rt_socket_address.h  rt_sortable_array.h  rt_temp_file.h  rt_unicode_code_point.h
rpr/include/layer006/: rt_console8.h  rt_error_message.h  rt_file_system.h  rt_process_file.h  rt_properties.h  rt_properties_parser.h  rt_socket.h
rpr/include/layer007/: rt_last_error_message.h  rt_process.h  rt_properties.h  rt_select.h
rpr/project/: .gitignore  rpr.cbp  rpr.vcxproj  rpr.vcxproj.filters  rpr_default.vcxproj
rpr/src/: rpr_internal.c  rpr_main.c
rpr/src/layer001/: rt_hash.c  rt_memory.c
rpr/src/layer002/: rt_binary_search.c  rt_buffered_input_stream.c  rt_buffered_output_stream.c  rt_chrono.c  rt_comparison.c  rt_critical_section.c  rt_error.c  rt_event.c  rt_get_process_id.c  rt_io_device.c  rt_memory_input_stream.c  rt_named_mutex.c  rt_quick_sort.c  rt_shared_mutex.c  rt_sleep.c  rt_slurp.c  rt_system_info.c  rt_thread_local_storage.c  rt_virtual_memory.c
rpr/src/layer003/: rt_binary_search.c  rt_buffered_input_stream.c  rt_char.c  rt_char8.c  rt_date.c  rt_env_var.c  rt_fast_initialization.c  rt_file.c  rt_file_mapping.c  rt_heap.c  rt_library.c  rt_page_heap.c  rt_pipe.c  rt_quick_sort.c  rt_read_lines.c  rt_semaphore.c  rt_shared_memory.c  rt_thread.c
rpr/src/layer004/: rt_address.c  rt_array.c  rt_base64.c  rt_check_rpr.c  rt_command_line_args.c  rt_console.c  rt_encoding.c  rt_file_path.c  rt_memory_output_stream.c  rt_os_version.c  rt_page_heap.c  rt_properties_parser.c  rt_random.c  rt_readers_writer_mutex.c  rt_shared_mutex.c  rt_small_file.c  rt_static_heap.c  rt_time.c  rt_url.c  rt_uuid.c
rpr/src/layer005/: rt_check_rpr.c  rt_console.c  rt_deduce_encoding.c  rt_encoding_deducer.c  rt_env_vars.c  rt_file.c  rt_file_system.c  rt_hash_table.c  rt_list.c  rt_runtime_heap.c  rt_socket_address.c  rt_sortable_array.c  rt_temp_file.c  rt_unicode_code_point.c
rpr/src/layer006/: rt_console8.c  rt_error_message.c  rt_file_system.c  rt_process_file.c  rt_properties.c  rt_properties_parser.c  rt_socket.c
rpr/src/layer007/: rt_last_error_message.c  rt_process.c  rt_properties.c  (+1 more)
samples/tests/: CMakeLists.txt
(+140 files in other folders)
